# jab-viewer

./: .gitignore  JABViewer.spec  LICENSE  README.md  build.bat  justfile  pyproject.toml  requirements.txt
.github/workflows/: release.yml
jab_viewer/: README.md  app.py  config.toml  highlight.py  i18n.py  jab_interface.py  ui_main.py  utils.py
jab_viewer/locales/: en.json  pt.json
